优化Log处理，增加调试信息显示。增加打印时间字段

--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -6,6 +6,9 @@
   <system.diagnostics>
     <trace autoflush="true">
     </trace>
+    <switches>
+      <add name="General_Log_SW" value="4"/>
+    </switches>
   </system.diagnostics>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
@@ -15,8 +18,8 @@
     <add key="debug_category" value="info,error,debug"/>
   </appSettings>
 <shuikong_layout_cfg>
-  <!--<add key="shuikong_wnd_path" value="S((亿业)网络发票及管理系统)[0]"/> -->
-  <add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>
+  <add key="shuikong_wnd_path" value="S((亿业)网络发票及管理系统)[0]"/>
+  <!--<add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>-->
   <add key="next_key" value="{ENTER}"/>
   <add key="max_send_ops" value="14"/>
   <add key="0" value="F(Customer_Text)"/>
