使用lock保护Trace中的Stream，增加错误计数

--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -5,6 +5,9 @@
   </configSections>
   <system.diagnostics>
     <trace autoflush="true">
+      <listeners>
+        <remove name="Default"></remove>
+      </listeners>
     </trace>
     <switches>
       <add name="General_Log_SW" value="4"/>
@@ -18,8 +21,8 @@
     <add key="debug_category" value="info,error,debug"/>
   </appSettings>
 <shuikong_layout_cfg>
-  <add key="shuikong_wnd_path" value="S((亿业)网络发票及管理系统)[0]"/>
-  <!--<add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>-->
+  <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
+  <add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>
   <add key="next_key" value="{ENTER}"/>
   <add key="max_send_ops" value="14"/>
   <add key="0" value="F(Customer_Text)"/>
