--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -18,7 +18,7 @@
     </startup>
   <appSettings>
     <add key="port" value="3344"/>
-    <add key="debug_category" value="info,error,debug"/>
+    <add key="user_info" value="壳牌赤沙站"/>
   </appSettings>
 <shuikong_layout_cfg>
   <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
