--- a/Configuration/CheDaoReciptHike.exe-广州增城钟村中化-金税.config
+++ b/Configuration/CheDaoReciptHike.exe-广州增城钟村中化-金税.config
@@ -18,7 +18,7 @@
     </startup>
   <appSettings>
     <add key="port" value="3344"/>
-    <add key="debug_category" value="info,error,debug"/>
+	<add key="user_info" value="中化朱村站"/>
   </appSettings>
 <shuikong_layout_cfg>
   <add key="shuikong_wnd_path" value="S(开具增值税普通发票)[0]"/>
