--- a/CheDaoLoader/CheDaoLoader.csproj
+++ b/CheDaoLoader/CheDaoLoader.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0AB47CD4-A31A-4753-9A3E-D177F5768F20}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{02FEB5AC-F817-4AD5-8660-FF34323C2AE7}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>CheDaoReciptHike</RootNamespace>
-    <AssemblyName>CheDaoReciptHike</AssemblyName>
+    <RootNamespace>CheDaoLoader</RootNamespace>
+    <AssemblyName>CheDaoLoader</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -40,64 +40,21 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CheRequest.cs" />
-    <Compile Include="fmLog.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="fmLog.Designer.cs">
-      <DependentUpon>fmLog.cs</DependentUpon>
-    </Compile>
-    <Compile Include="fmReqList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="fmReqList.Designer.cs">
-      <DependentUpon>fmReqList.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ShuiKongInterface.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReciptServer.cs" />
-    <EmbeddedResource Include="fmLog.resx">
-      <DependentUpon>fmLog.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="fmReqList.resx">
-      <DependentUpon>fmReqList.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\app_rules.config" />
-    <None Include="Resources\trayIcon.ico" />
+    <ProjectReference Include="..\AutoUpdater\AutoUpdater.csproj">
+      <Project>{4c223dbf-74b3-4243-94c9-a681136e7959}</Project>
+      <Name>AutoUpdater</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
