--- a/bin/CheDaoReciptHike.exe.config
+++ b/bin/CheDaoReciptHike.exe.config
@@ -20,9 +20,11 @@
     <add key="port" value="3344"/>
     <add key="user_info" value="壳牌赤沙站"/>
     <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
+    <add key="lifetime_of_rec" value="65"/>
   </appSettings>
 <shuikong_layout_cfg>
   <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
+  <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/>
   <add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>
   <add key="next_key" value="{ENTER}"/>
   <add key="max_send_ops" value="14"/>
