support sendmessage to replace sendkeys

--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
       <section type="System.Configuration.NameValueSectionHandler" name="shuikong_layout_cfg"/>
+      <section type="System.Configuration.NameValueSectionHandler" name="shuikong_field_maps"/>
   </configSections>
   <system.diagnostics>
     <trace autoflush="true">
@@ -21,11 +22,18 @@
     <add key="user_info" value="壳牌赤沙站"/>
     <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
     <add key="lifetime_of_rec" value="65"/>
+    <!--<add key="shuikong_interface" value ="CheDaoReciptHike.SndMsgShuiKong"/>-->
+    <add key="shuikong_interface" value ="CheDaoReciptHike.SendKeyShuiKong"/>
   </appSettings>
 <shuikong_layout_cfg>
   <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
-  <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/>
+  <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/><!--亿业通用版-->
+
+  <add key="shuikong_wnd_path-2" value="S(开具增值税普通发票)[0]"/>
+  <add key="first_focus-2" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]"/> <!-- 金穗 -->
   <add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>
+  
+  
   <add key="next_key" value="{ENTER}"/>
   <add key="max_send_ops" value="14"/>
   <add key="0" value="F(Customer_Text)"/>
@@ -37,4 +45,9 @@
   <add key="13" value="F(Product_Price)"/>
 
 </shuikong_layout_cfg>
+
+  <shuikong_field_maps>
+    <!--<add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]" value="Customer_Text"/>-->
+    <add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>
+  </shuikong_field_maps>
 </configuration>
