--- a/Configuration/CheDaoReciptHike.exe-北京成寿路鑫旺油站.config
+++ b/Configuration/CheDaoReciptHike.exe-北京成寿路鑫旺油站.config
@@ -20,8 +20,8 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="port" value="3355"/>  <!--服务端口，请确保与一体机一致-->
-    <add key="user_info" value="壳牌赤沙站"/><!--油站名，暂时可选-->
+    <add key="port" value="3344"/>  <!--服务端口，请确保与一体机一致-->
+    <add key="user_info" value="北京鑫旺油站"/><!--油站名，暂时可选-->
     <add key="user_id" value=""/><!--油站ID,由服务器端分配，暂时可选-->
     <!--<add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>--><!--给用户重要信息提醒，可选-->
     <add key="lifetime_of_rec" value="65"/><!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
@@ -35,10 +35,10 @@
   <!--为增强体验，可以通过下面配置确保聚焦第一个输入框，可选-->
   <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/><!--亿业通用版-->
 
-  <add key="shuikong_wnd_path-2" value="S(开具增值税普通发票)[0]"/>
-  <add key="first_focus-2" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]"/> <!-- 金穗 -->
-  <add key="shuikong_wnd_path" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
-  <add key="first_focus" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
+  <add key="shuikong_wnd_path" value="S(开具增值税普通发票)[0]"/>
+  <add key="first_focus" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[10]/T(WindowsForms10.EDIT.app.0.3e2f22e_r12_ad1)[0]"/> <!-- 金穗 -->
+  <add key="shuikong_wnd_path-1" value="S(无标题 - 记事本)[0]"/>
+  
   <!--下一个输入框的操作键值-->
   <add key="next_key" value="{ENTER}"/>
   <!--发票输入框的布局-->
@@ -55,8 +55,7 @@
 
   <shuikong_field_maps>
     <!--使用MessageSend发送消息-->
-    <!--<add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]" value="Customer_Text"/>-->
-    <add key="S(数据验证)[0]/S(DY12634217789885198868)[0]" value="Customer_Text"/>
+    <add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[0]/T(WindowsForms10.Window.8.app.0.3e2f22e_r12_ad1)[10]/T(WindowsForms10.EDIT.app.0.3e2f22e_r12_ad1)[0]" value="Customer_Text"/>
     <!--<add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>-->
   </shuikong_field_maps>
 </configuration>
