--- a/bin/CheDaoLoader.exe.config
+++ b/bin/CheDaoLoader.exe.config
@@ -1,14 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="target_folder" value="."/>
-    <add key="target_exe" value="CheDaoReciptHike.exe"/>
-    <add key="update_file" value ="UpdateList.xml"/>
-    <add key="updater_folder" value="."/>
-    <add key="updater_exe" value="Autoupdate.exe"/>
-  
+    <add key="service_url" value="http://127.0.0.1/public/index.php/chedao/" />
+    <add key="target_folder" value="." />
+    <add key="target_exe" value="CheDaoReciptHike.exe" />
+    <add key="update_file" value="UpdateList.xml" />
+    <add key="updater_folder" value="." />
+    <add key="updater_exe" value="Autoupdate.exe" />
+    <add key="client_id" value="5647e3ff22392" />
   </appSettings>
 </configuration>
