--- a/bin/CheDaoReciptHike.exe.config
+++ b/bin/CheDaoReciptHike.exe.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
+    <!--关于税控软件接口的两种配置，两者选择一个即可。详情，请参见下面每个section的描述-->
       <section type="System.Configuration.NameValueSectionHandler" name="shuikong_layout_cfg"/>
       <section type="System.Configuration.NameValueSectionHandler" name="shuikong_field_maps"/>
   </configSections>
@@ -11,6 +12,7 @@
       </listeners>
     </trace>
     <switches>
+      <!--log输出开关，0是没有输出，1只是错误输出，。。。。4为输出所有的log-->
       <add name="General_Log_SW" value="4"/>
     </switches>
   </system.diagnostics>
@@ -18,22 +20,28 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="port" value="3344"/>
-    <add key="user_info" value="壳牌赤沙站"/>
-    <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
-    <add key="lifetime_of_rec" value="65"/>
-    <add key="shuikong_interface" value ="CheDaoReciptHike.SMDirect"/>
+    <add key="port" value="3344"/>  <!--服务端口，请确保与一体机一致-->
+    <add key="user_info" value="壳牌赤沙站"/><!--油站名，暂时可选-->
+    <add key="user_id" value=""/><!--油站ID,由服务器端分配，暂时可选-->
+    <!--<add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>--><!--给用户重要信息提醒，可选-->
+    <add key="lifetime_of_rec" value="65"/><!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
+    <add key="shuikong_interface" value ="CheDaoReciptHike.SndMsgShuiKong"/><!--使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
+    <!--<add key="shuikong_interface" value ="CheDaoReciptHike.SendKeyShuiKong"/>--><!--使用MessageSend方式，通用性强，但配置复杂-->
   </appSettings>
+  
+    
 <shuikong_layout_cfg>
-  <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
+  <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/><!--税控软件主窗口名，简单的定位条件确保匹配成功-->
+  <!--为增强体验，可以通过下面配置确保聚焦第一个输入框，可选-->
   <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/><!--亿业通用版-->
 
   <add key="shuikong_wnd_path-2" value="S(开具增值税普通发票)[0]"/>
   <add key="first_focus-2" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]"/> <!-- 金穗 -->
-  <add key="shuikong_wnd_path" value="S(无标题 - 记事本)[0]"/>
-  
-  
+  <add key="shuikong_wnd_path" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
+  <add key="first_focus" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
+  <!--下一个输入框的操作键值-->
   <add key="next_key" value="{ENTER}"/>
+  <!--发票输入框的布局-->
   <add key="max_send_ops" value="14"/>
   <add key="0" value="F(Customer_Text)"/>
   <add key="5" value="人民币"/>
@@ -46,7 +54,9 @@
 </shuikong_layout_cfg>
 
   <shuikong_field_maps>
+    <!--使用MessageSend发送消息-->
     <!--<add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]" value="Customer_Text"/>-->
-    <add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>
+    <add key="S(数据验证)[0]/S(DY12634217789885198868)[0]" value="Customer_Text"/>
+    <!--<add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>-->
   </shuikong_field_maps>
 </configuration>
