--- a/CheDaoLoader/App.config
+++ b/CheDaoLoader/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <appSettings>
-    <add key="service_url" value="http://127.0.0.1/public/index.php/chedao/"/>
+    <add key="service_url" value="http://xbim2016.duapp.com/public/index.php/chedao/"/>
     <add key="target_folder" value="."/>
     <add key="target_exe" value="CheDaoReciptHike.exe"/>
     <add key="update_file" value ="UpdateList.xml"/>
