--- a/bin/CheDaoReciptHike.exe.config
+++ b/bin/CheDaoReciptHike.exe.config
@@ -23,10 +23,9 @@
     <add key="port" value="3344"/>  <!--服务端口，请确保与一体机一致-->
     <add key="user_info" value="壳牌赤沙站"/><!--油站名，暂时可选-->
     <add key="user_id" value=""/><!--油站ID,由服务器端分配，暂时可选-->
-    <!--<add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>--><!--给用户重要信息提醒，可选-->
+    <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/><!--给用户重要信息提醒，可选-->
     <add key="lifetime_of_rec" value="65"/><!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
-    <add key="shuikong_interface" value ="CheDaoReciptHike.SndMsgShuiKong"/><!--使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
-    <!--<add key="shuikong_interface" value ="CheDaoReciptHike.SendKeyShuiKong"/>--><!--使用MessageSend方式，通用性强，但配置复杂-->
+    <add key="shuikong_interface" value ="CheDaoReciptHike.JinSuiGenImp"/><!--SndMsgShuiKong SendKeyShuiKong, JinSuiGenImp使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
   </appSettings>
   
     
@@ -37,11 +36,11 @@
 
   <add key="shuikong_wnd_path-2" value="S(开具增值税普通发票)[0]"/>
   <add key="first_focus-2" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]"/> <!-- 金穗 -->
-  <add key="shuikong_wnd_path" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
-  <add key="first_focus" value="S(数据验证)[0]/S(DY12634217789885198868)[0]"/>
+  <add key="shuikong_wnd_path" value="S(数据验证)[0]"/>
+  <add key="first_focus" value="S(数据验证)[0]/T(WindowsForms10.EDIT.app.)[9]"/>
   <!--下一个输入框的操作键值-->
-  <add key="next_key" value="{ENTER}"/>
-  <!--发票输入框的布局-->
+  <add key="next_key" value="{TAB}"/>
+  <!--发票输入框的布局
   <add key="max_send_ops" value="14"/>
   <add key="0" value="F(Customer_Text)"/>
   <add key="5" value="人民币"/>
@@ -49,7 +48,13 @@
   <add key="10" value="F(Product_Code)"/>
   <add key="11" value="升"/>
   <add key="12" value="F(Product_Number)"/>
-  <add key="13" value="F(Product_Price)"/>
+  <add key="13" value="F(Product_Price)"/>-->
+  <add key="max_send_ops" value="8"/>
+  <add key="0" value="F(Customer_Text)"/>
+  <add key="1" value="Test"/>
+  <add key="4" value="F(Product_Code)"/>
+  <add key="5" value="F(Product_Number)"/>
+  <add key="6" value="F(Product_Price)"/>
 
 </shuikong_layout_cfg>
 
