--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -25,7 +25,7 @@
     <add key="user_id" value=""/><!--油站ID,由服务器端分配，暂时可选-->
     <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/><!--给用户重要信息提醒，可选-->
     <add key="lifetime_of_rec" value="65"/><!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
-    <add key="shuikong_interface" value ="CheDaoReciptHike.JinSuiGenImp"/><!--SndMsgShuiKong SendKeyShuiKong, JinSuiGenImp使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
+    <add key="shuikong_interface" value ="CheDaoReciptHike.JinSuiGenSendKeyImp"/><!--SndMsgShuiKong SendKeyShuiKong, JinSuiGenSendKeyImp, JinSuiGenSndMsgImp使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
   </appSettings>
   
     
@@ -61,7 +61,8 @@
   <shuikong_field_maps>
     <!--使用MessageSend发送消息-->
     <!--<add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]" value="Customer_Text"/>-->
-    <add key="S(数据验证)[0]/S(DY12634217789885198868)[0]" value="Customer_Text"/>
+    <add key="shuikong_wnd_path" value="S(数据验证)[0]"/> <!--定位税控软件主窗口-->
+    <add key="S(数据验证)[0]/T(WindowsForms10.EDIT.app.)[9]" value="Customer_Text"/>
     <!--<add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>-->
   </shuikong_field_maps>
 </configuration>
