--- a/CheDaoLoader/App.config
+++ b/CheDaoLoader/App.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+        
+    <supportedRuntime version="v2.0.50727"/></startup>
   <appSettings>
     <add key="service_url" value="http://xbim2016.duapp.com/public/index.php/chedao/"/>
     <add key="target_folder" value="."/>
     <add key="target_exe" value="CheDaoReciptHike.exe"/>
-    <add key="update_file" value ="UpdateList.xml"/>
+    <add key="update_file" value="UpdateList.xml"/>
     <add key="updater_folder" value="."/>
     <add key="updater_exe" value="Autoupdate.exe"/>
   
