--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <!--关于税控软件接口的两种配置，两者选择一个即可。详情，请参见下面每个section的描述-->
-    <section type="System.Configuration.NameValueSectionHandler" name="shuikong_layout_cfg"/>
-    <section type="System.Configuration.NameValueSectionHandler" name="shuikong_field_maps"/>
-  </configSections>
   <system.diagnostics>
     <trace autoflush="true">
       <listeners>
@@ -27,51 +22,12 @@
     <!--油站名，暂时可选-->
     <add key="user_id" value=""/>
     <!--油站ID,由服务器端分配，暂时可选-->
-    <add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
-    <!--给用户重要信息提醒，可选-->
+    <!--<add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
+    给用户重要信息提醒，可选-->
     <add key="lifetime_of_rec" value="65"/>
     <!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
-    <add key="shuikong_interface" value="CheDaoReciptHike.JinSuiGenSndMsgImp"/>
-    <!--SndMsgShuiKong SendKeyShuiKong, JinSuiGenSendKeyImp, JinSuiGenSndMsgImp使用发送键盘方式与税控机通信：存在限制，可能被360拦截，要求输入法切换为中文输入-->
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
   </appSettings>
-  <shuikong_layout_cfg>
-    <add key="shuikong_wnd_path-1" value="S((亿业)网络发票及管理系统)[0]"/>
-    <!--税控软件主窗口名，简单的定位条件确保匹配成功-->
-    <!--为增强体验，可以通过下面配置确保聚焦第一个输入框，可选-->
-    <add key="first_focus-1" value="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]"/>
-    <!--亿业通用版-->
-    <add key="shuikong_wnd_path-2" value="S(开具增值税普通发票)[0]"/>
-    <add key="first_focus-2" value="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]"/>
-    <!-- 金穗 -->
-    <add key="shuikong_wnd_path" value="S(数据验证)[0]"/>
-    <add key="first_focus" value="S(数据验证)[0]/T(WindowsForms10.EDIT.app.)[9]"/>
-    <!--下一个输入框的操作键值-->
-    <add key="next_key" value="{TAB}"/>
-    <!--发票输入框的布局
-  <add key="max_send_ops" value="14"/>
-  <add key="0" value="F(Customer_Text)"/>
-  <add key="5" value="人民币"/>
-  <add key="6" value="车到加油"/>
-  <add key="10" value="F(Product_Code)"/>
-  <add key="11" value="升"/>
-  <add key="12" value="F(Product_Number)"/>
-  <add key="13" value="F(Product_Price)"/>-->
-    <add key="max_send_ops" value="8"/>
-    <add key="0" value="F(Customer_Text)"/>
-    <add key="1" value="Test"/>
-    <add key="4" value="F(Product_Code)"/>
-    <add key="5" value="F(Product_Number)"/>
-    <add key="6" value="F(Product_Price)"/>
-  </shuikong_layout_cfg>
-  <shuikong_field_maps>
-    <!--使用MessageSend发送消息-->
-    <!--<add key="S(开具增值税普通发票)[0]/S(FPtiankai_new)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[0]/T(WindowsForms10.Window.8.app.0.2cea0ca_r13_ad1)[10]/T(WindowsForms10.EDIT.app.0.2cea0ca_r13_ad1)[0]" value="Customer_Text"/>-->
-    <add key="shuikong_wnd_path" value="S(数据验证)[0]"/>
-    <!--定位税控软件主窗口-->
-    <add key="S(数据验证)[0]/T(WindowsForms10.EDIT.app.)[9]" value="Customer_Text"/>
-    <!--<add key="S((亿业)网络发票及管理系统)[0]/T(TPanel)[0]/T(TPanel)[0]/S(发票开具)[0]/T(TPageControl)[0]/S(发票明细)[0]/T(TPanel)[3]/T(TwwDBLookupCombo)[0]" value="Customer_Text"/>-->
-  </shuikong_field_maps>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
       <providers>
