--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -27,6 +27,10 @@
     <add key="lifetime_of_rec" value="65"/>
     <!--一体机信息保留时间，超过该事件，应用将会删除对应记录-->
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
+    <!-- refer to https://msdn.microsoft.com/en-us/library/system.windows.forms.sendkeys.sendwait(v=vs.110).aspx -->
+      <add key="SendKeys" value="SendInput"/>
+    
+    
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
