install script and icon change

--- a/CheDaoLoader/CheDaoLoader.csproj
+++ b/CheDaoLoader/CheDaoLoader.csproj
@@ -36,6 +36,9 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Startup_Refresh_128px_548040_easyicon.net.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -99,6 +102,9 @@
   <ItemGroup>
     <None Include="Resources\cities.json" />
     <None Include="Resources\trayicon.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Startup_Refresh_128px_548040_easyicon.net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
