--- a/CheDaoReciptHike/App.config
+++ b/CheDaoReciptHike/App.config
@@ -18,9 +18,9 @@
   <appSettings>
     <add key="port" value="3344"/>
     <!--服务端口，请确保与一体机一致-->
-    <add key="user_info" value="壳牌赤沙站"/>
+    <!--<add key="user_info" value="壳牌赤沙站"/>-->
     <!--油站名，暂时可选-->
-    <add key="user_id" value=""/>
+    <!--<add key="user_id" value=""/>-->
     <!--油站ID,由服务器端分配，暂时可选-->
     <!--<add key="banner" value="打印前，请确认光标停留在税款软件客户名称区"/>
     给用户重要信息提醒，可选-->
