--- a/CheDaoReciptHike/CheDaoReciptHike.csproj
+++ b/CheDaoReciptHike/CheDaoReciptHike.csproj
@@ -51,6 +51,9 @@
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>invoice_128px_1169032_easyicon.net.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -135,6 +138,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\app_recipt.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="invoice_128px_1169032_easyicon.net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
