--- a/AutoUpdate/App.config
+++ b/AutoUpdate/App.config
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="AutoUpdate.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="TempFilePath" value="TempFile\"/>
    </appSettings>
+  <applicationSettings>
+    <AutoUpdate.Properties.Settings>
+      <setting name="Setting" serializeAs="String">
+        <value />
+      </setting>
+    </AutoUpdate.Properties.Settings>
+  </applicationSettings>
 </configuration>
