--- a/CheDaoLoader/CheDaoLoader.csproj
+++ b/CheDaoLoader/CheDaoLoader.csproj
@@ -23,6 +23,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +41,8 @@
   <PropertyGroup>
     <ApplicationIcon>Startup_Refresh_128px_548040_easyicon.net.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup />
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -72,6 +76,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resource.resx</DependentUpon>
     </Compile>
+    <Compile Include="wndEnvCfg.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="wndEnvCfg.Designer.cs">
+      <DependentUpon>wndEnvCfg.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
@@ -82,6 +92,10 @@
     <ProjectReference Include="..\AutoUpdater\AutoUpdater.csproj">
       <Project>{4c223dbf-74b3-4243-94c9-a681136e7959}</Project>
       <Name>AutoUpdater</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\WndInteract\WndInteract.csproj">
+      <Project>{49a458a3-e69c-46cc-9901-17518fe42f87}</Project>
+      <Name>WndInteract</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +109,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resource.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="wndEnvCfg.resx">
+      <DependentUpon>wndEnvCfg.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\chedao-logo.png" />
@@ -104,6 +121,9 @@
     <None Include="Resources\trayicon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="UpdateList.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Startup_Refresh_128px_548040_easyicon.net.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
