--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ GlobalMacroRecorder/bin/**
 GlobalMacroRecorder/obj/**
 WndInteract/obj/**
 WndInteract/bin/**
-bin/*.pdb
-bin/*.vshost.*
+bin/*.*
+Output/*.*
 *.log
+UpdateList.xml
