--- a/CheDaoLoader/App.config
+++ b/CheDaoLoader/App.config
@@ -10,5 +10,6 @@
     <add key="update_file" value="UpdateList.xml"/>
     <add key="updater_folder" value="."/>
     <add key="updater_exe" value="Autoupdate.exe"/>
+    <add key="client_id" value = "566bb51be196e"/>
   </appSettings>
 </configuration>
